...
        "BSD-3-Clause",
    ),
)

const val APACHE_2_0_TEXT: String = """
                                 Apache License
                           Version 2.0, January 2004
                        http://www.apache.org/licenses/

   TERMS AND CONDITIONS FOR USE, REPRODUCTION, AND DISTRIBUTION

   1. Definitions.

...
